trunk/legacy/pdu/pal/src/pdmr/svs/y.output

state 0
	$accept : _view_definition $end 
	$$1 : _    (1)

	.  reduce 1

	view_definition  goto 1
	$$1  goto 2

state 1
	$accept :  view_definition_$end 

	$end  accept
	.  error


state 2
	view_definition :  $$1__create _view _view_table_name _open $$2 view_col_list _close $$3 _as _select $$4 table_col_list $$5 _from table_name_list where_part 

	_create  shift 3
	.  error


state 3
	view_definition :  $$1 _create__view _view_table_name _open $$2 view_col_list _close $$3 _as _select $$4 table_col_list $$5 _from table_name_list where_part 

	_view  shift 4
	.  error


state 4
	view_definition :  $$1 _create _view__view_table_name _open $$2 view_col_list _close $$3 _as _select $$4 table_col_list $$5 _from table_name_list where_part 

	_view_table_name  shift 5
	.  error


state 5
	view_definition :  $$1 _create _view _view_table_name__open $$2 view_col_list _close $$3 _as _select $$4 table_col_list $$5 _from table_name_list where_part 

	_open  shift 6
	.  error


state 6
	view_definition :  $$1 _create _view _view_table_name _open_$$2 view_col_list _close $$3 _as _select $$4 table_col_list $$5 _from table_name_list where_part 
	$$2 : _    (2)

	.  reduce 2

	$$2  goto 7

state 7
	view_definition :  $$1 _create _view _view_table_name _open $$2_view_col_list _close $$3 _as _select $$4 table_col_list $$5 _from table_name_list where_part 

	_view_table_name  shift 9
	.  error

	view_col_list  goto 8

state 8
	view_definition :  $$1 _create _view _view_table_name _open $$2 view_col_list__close $$3 _as _select $$4 table_col_list $$5 _from table_name_list where_part 
	view_col_list :  view_col_list__comma _view_table_name 

	_close  shift 10
	_comma  shift 11
	.  error


state 9
	view_col_list :  _view_table_name_    (10)

	.  reduce 10


state 10
	view_definition :  $$1 _create _view _view_table_name _open $$2 view_col_list _close_$$3 _as _select $$4 table_col_list $$5 _from table_name_list where_part 
	$$3 : _    (3)

	.  reduce 3

	$$3  goto 12

state 11
	view_col_list :  view_col_list _comma__view_table_name 

	_view_table_name  shift 13
	.  error


state 12
	view_definition :  $$1 _create _view _view_table_name _open $$2 view_col_list _close $$3__as _select $$4 table_col_list $$5 _from table_name_list where_part 

	_as  shift 14
	.  error


state 13
	view_col_list :  view_col_list _comma _view_table_name_    (9)

	.  reduce 9


state 14
	view_definition :  $$1 _create _view _view_table_name _open $$2 view_col_list _close $$3 _as__select $$4 table_col_list $$5 _from table_name_list where_part 

	_select  shift 15
	.  error


state 15
	view_definition :  $$1 _create _view _view_table_name _open $$2 view_col_list _close $$3 _as _select_$$4 table_col_list $$5 _from table_name_list where_part 
	$$4 : _    (4)

	.  reduce 4

	$$4  goto 16

state 16
	view_definition :  $$1 _create _view _view_table_name _open $$2 view_col_list _close $$3 _as _select $$4_table_col_list $$5 _from table_name_list where_part 

	_column_name  shift 20
	_int_value  shift 22
	_real_value  shift 23
	.  error

	table_col_list  goto 17
	table_cols  goto 18
	column_or_value  goto 19
	values  goto 21

state 17
	view_definition :  $$1 _create _view _view_table_name _open $$2 view_col_list _close $$3 _as _select $$4 table_col_list_$$5 _from table_name_list where_part 
	table_col_list :  table_col_list__comma table_cols 
	$$5 : _    (5)

	_comma  shift 25
	.  reduce 5

	$$5  goto 24

state 18
	table_col_list :  table_cols_    (12)
	table_cols :  table_cols_arith_oper $$13 column_or_value 

	_multiply  shift 29
	_divide  shift 30
	_add  shift 27
	_subtract  shift 28
	.  reduce 12

	arith_oper  goto 26

state 19
	table_cols :  column_or_value_    (15)

	.  reduce 15


state 20
	column_or_value :  _column_name_    (16)

	.  reduce 16


state 21
	column_or_value :  values_    (17)

	.  reduce 17


state 22
	values :  _int_value_    (18)

	.  reduce 18


state 23
	values :  _real_value_    (19)

	.  reduce 19


state 24
	view_definition :  $$1 _create _view _view_table_name _open $$2 view_col_list _close $$3 _as _select $$4 table_col_list $$5__from table_name_list where_part 

	_from  shift 31
	.  error


state 25
	table_col_list :  table_col_list _comma_table_cols 

	_column_name  shift 20
	_int_value  shift 22
	_real_value  shift 23
	.  error

	table_cols  goto 32
	column_or_value  goto 19
	values  goto 21

state 26
	table_cols :  table_cols arith_oper_$$13 column_or_value 
	$$13 : _    (13)

	.  reduce 13

	$$13  goto 33

state 27
	arith_oper :  _add_    (20)

	.  reduce 20


state 28
	arith_oper :  _subtract_    (21)

	.  reduce 21


state 29
	arith_oper :  _multiply_    (22)

	.  reduce 22


state 30
	arith_oper :  _divide_    (23)

	.  reduce 23


state 31
	view_definition :  $$1 _create _view _view_table_name _open $$2 view_col_list _close $$3 _as _select $$4 table_col_list $$5 _from_table_name_list where_part 

	_view_table_name  shift 35
	.  error

	table_name_list  goto 34

state 32
	table_col_list :  table_col_list _comma table_cols_    (11)
	table_cols :  table_cols_arith_oper $$13 column_or_value 

	_multiply  shift 29
	_divide  shift 30
	_add  shift 27
	_subtract  shift 28
	.  reduce 11

	arith_oper  goto 26

state 33
	table_cols :  table_cols arith_oper $$13_column_or_value 

	_column_name  shift 20
	_int_value  shift 22
	_real_value  shift 23
	.  error

	column_or_value  goto 36
	values  goto 21

state 34
	view_definition :  $$1 _create _view _view_table_name _open $$2 view_col_list _close $$3 _as _select $$4 table_col_list $$5 _from table_name_list_where_part 
	table_name_list :  table_name_list__comma _view_table_name 
	where_part : _    (8)

	_where  shift 39
	_comma  shift 38
	.  reduce 8

	where_part  goto 37

state 35
	table_name_list :  _view_table_name_    (91)

	.  reduce 91


state 36
	table_cols :  table_cols arith_oper $$13 column_or_value_    (14)

	.  reduce 14


state 37
	view_definition :  $$1 _create _view _view_table_name _open $$2 view_col_list _close $$3 _as _select $$4 table_col_list $$5 _from table_name_list where_part_    (6)

	.  reduce 6


state 38
	table_name_list :  table_name_list _comma__view_table_name 

	_view_table_name  shift 40
	.  error


state 39
	where_part :  _where_where_clause 

	_column_name  shift 53
	_open  shift 43
	_inside_open  shift 47
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	where_clause  goto 41
	selection_criteria  goto 42
	select_lines  goto 44
	line  goto 45
	thecondition  goto 46
	multicondition  goto 48
	condition  goto 49
	expression  goto 50
	operand  goto 51
	value  goto 52

state 40
	table_name_list :  table_name_list _comma _view_table_name_    (90)

	.  reduce 90


state 41
	where_part :  _where where_clause_    (7)
	where_clause :  where_clause_conj selection_criteria 

	_inside_and  shift 60
	_outside_or  shift 58
	_inside_or  shift 61
	_outside_and  shift 59
	.  reduce 7

	conj  goto 57

state 42
	where_clause :  selection_criteria_    (25)

	.  reduce 25


state 43
	selection_criteria :  _open_$$26 select_lines _close 
	$$26 : _    (26)

	.  reduce 26

	$$26  goto 62

44: shift/reduce conflict (shift 63, red'n 28) on _inside_or
state 44
	selection_criteria :  select_lines_    (28)
	select_lines :  select_lines__inside_or line 

	_inside_or  shift 63
	.  reduce 28


45: shift/reduce conflict (shift 60, red'n 30) on _inside_and
45: shift/reduce conflict (shift 58, red'n 30) on _outside_or
45: shift/reduce conflict (shift 61, red'n 30) on _inside_or
45: shift/reduce conflict (shift 59, red'n 30) on _outside_and
state 45
	select_lines :  line_    (30)
	line :  line_conj thecondition 

	_inside_and  shift 60
	_outside_or  shift 58
	_inside_or  shift 61
	_outside_and  shift 59
	.  reduce 30

	conj  goto 64

state 46
	line :  thecondition_    (32)

	.  reduce 32


state 47
	thecondition :  _inside_open_multicondition _inside_close 

	_column_name  shift 53
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	multicondition  goto 65
	condition  goto 49
	expression  goto 50
	operand  goto 51
	value  goto 52

state 48
	thecondition :  multicondition_    (34)
	multicondition :  multicondition__inside_inside_and condition 

	_inside_inside_and  shift 66
	.  reduce 34


state 49
	multicondition :  condition_    (36)

	.  reduce 36


state 50
	condition :  expression_oper expression 
	condition :  expression__between $$38 expression _inside_and $$39 expression 
	condition :  expression__not _between $$41 expression _inside_and $$42 expression 
	condition :  expression__in $$44 _inside_open $$45 value_list _inside_close 
	condition :  expression__not $$47 _in $$48 _inside_open $$49 value_list _inside_close 
	condition :  expression__is $$51 _not $$52 _null 
	condition :  expression__is $$54 _null 
	condition :  expression__not $$56 _like $$57 _string 
	condition :  expression__like $$59 _string 
	condition :  expression__equal $$61 expression 
	condition :  expression__not_equal $$63 expression 
	condition :  expression__equal $$65 _string 
	condition :  expression__not_equal $$67 _string 
	expression :  expression_oper operand 

	_greater  shift 75
	_greater_equal  shift 76
	_less  shift 77
	_less_equal  shift 78
	_equal  shift 73
	_un_equal  shift 79
	_not_equal  shift 74
	_not  shift 69
	_between  shift 68
	_in  shift 70
	_like  shift 72
	_is  shift 71
	.  error

	oper  goto 67

state 51
	expression :  operand_    (70)

	.  reduce 70


state 52
	operand :  value_    (71)

	.  reduce 71


state 53
	operand :  _column_name_    (72)

	.  reduce 72


state 54
	value :  _int_value_    (87)

	.  reduce 87


state 55
	value :  _real_value_    (88)

	.  reduce 88


state 56
	value :  _string_    (89)

	.  reduce 89


state 57
	where_clause :  where_clause conj_selection_criteria 

	_column_name  shift 53
	_open  shift 43
	_inside_open  shift 47
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	selection_criteria  goto 80
	select_lines  goto 44
	line  goto 45
	thecondition  goto 46
	multicondition  goto 48
	condition  goto 49
	expression  goto 50
	operand  goto 51
	value  goto 52

state 58
	conj :  _outside_or_    (73)

	.  reduce 73


state 59
	conj :  _outside_and_    (74)

	.  reduce 74


state 60
	conj :  _inside_and_    (75)

	.  reduce 75


state 61
	conj :  _inside_or_    (76)

	.  reduce 76


state 62
	selection_criteria :  _open $$26_select_lines _close 

	_column_name  shift 53
	_inside_open  shift 47
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	select_lines  goto 81
	line  goto 45
	thecondition  goto 46
	multicondition  goto 48
	condition  goto 49
	expression  goto 50
	operand  goto 51
	value  goto 52

state 63
	select_lines :  select_lines _inside_or_line 

	_column_name  shift 53
	_inside_open  shift 47
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	line  goto 82
	thecondition  goto 46
	multicondition  goto 48
	condition  goto 49
	expression  goto 50
	operand  goto 51
	value  goto 52

state 64
	line :  line conj_thecondition 

	_column_name  shift 53
	_inside_open  shift 47
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	thecondition  goto 83
	multicondition  goto 48
	condition  goto 49
	expression  goto 50
	operand  goto 51
	value  goto 52

state 65
	thecondition :  _inside_open multicondition__inside_close 
	multicondition :  multicondition__inside_inside_and condition 

	_inside_inside_and  shift 66
	_inside_close  shift 84
	.  error


state 66
	multicondition :  multicondition _inside_inside_and_condition 

	_column_name  shift 53
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	condition  goto 85
	expression  goto 50
	operand  goto 51
	value  goto 52

state 67
	condition :  expression oper_expression 
	expression :  expression oper_operand 

	_column_name  shift 53
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	expression  goto 86
	operand  goto 87
	value  goto 52

state 68
	condition :  expression _between_$$38 expression _inside_and $$39 expression 
	$$38 : _    (38)

	.  reduce 38

	$$38  goto 88

state 69
	condition :  expression _not__between $$41 expression _inside_and $$42 expression 
	condition :  expression _not_$$47 _in $$48 _inside_open $$49 value_list _inside_close 
	condition :  expression _not_$$56 _like $$57 _string 
	$$47 : _    (47)
	$$56 : _    (56)

	_between  shift 89
	_like  reduce 56
	.  reduce 47

	$$47  goto 90
	$$56  goto 91

state 70
	condition :  expression _in_$$44 _inside_open $$45 value_list _inside_close 
	$$44 : _    (44)

	.  reduce 44

	$$44  goto 92

state 71
	condition :  expression _is_$$51 _not $$52 _null 
	condition :  expression _is_$$54 _null 
	$$51 : _    (51)
	$$54 : _    (54)

	_null  reduce 54
	.  reduce 51

	$$51  goto 93
	$$54  goto 94

state 72
	condition :  expression _like_$$59 _string 
	$$59 : _    (59)

	.  reduce 59

	$$59  goto 95

73: reduce/reduce conflict (red'ns 83 and 61 ) on _column_name
73: reduce/reduce conflict (red'ns 83 and 61 ) on _string
73: reduce/reduce conflict (red'ns 83 and 61 ) on _int_value
73: reduce/reduce conflict (red'ns 83 and 61 ) on _real_value
73: reduce/reduce conflict (red'ns 61 and 65 ) on _string
state 73
	condition :  expression _equal_$$61 expression 
	condition :  expression _equal_$$65 _string 
	oper :  _equal_    (83)
	$$61 : _    (61)
	$$65 : _    (65)

	.  reduce 61

	$$61  goto 96
	$$65  goto 97

74: reduce/reduce conflict (red'ns 82 and 63 ) on _column_name
74: reduce/reduce conflict (red'ns 82 and 63 ) on _string
74: reduce/reduce conflict (red'ns 82 and 63 ) on _int_value
74: reduce/reduce conflict (red'ns 82 and 63 ) on _real_value
74: reduce/reduce conflict (red'ns 63 and 67 ) on _string
state 74
	condition :  expression _not_equal_$$63 expression 
	condition :  expression _not_equal_$$67 _string 
	oper :  _not_equal_    (82)
	$$63 : _    (63)
	$$67 : _    (67)

	.  reduce 63

	$$63  goto 98
	$$67  goto 99

state 75
	oper :  _greater_    (77)

	.  reduce 77


state 76
	oper :  _greater_equal_    (78)

	.  reduce 78


state 77
	oper :  _less_    (79)

	.  reduce 79


state 78
	oper :  _less_equal_    (80)

	.  reduce 80


state 79
	oper :  _un_equal_    (81)

	.  reduce 81


state 80
	where_clause :  where_clause conj selection_criteria_    (24)

	.  reduce 24


state 81
	selection_criteria :  _open $$26 select_lines__close 
	select_lines :  select_lines__inside_or line 

	_close  shift 100
	_inside_or  shift 63
	.  error


82: shift/reduce conflict (shift 60, red'n 29) on _inside_and
82: shift/reduce conflict (shift 58, red'n 29) on _outside_or
82: shift/reduce conflict (shift 61, red'n 29) on _inside_or
82: shift/reduce conflict (shift 59, red'n 29) on _outside_and
state 82
	select_lines :  select_lines _inside_or line_    (29)
	line :  line_conj thecondition 

	_inside_and  shift 60
	_outside_or  shift 58
	_inside_or  shift 61
	_outside_and  shift 59
	.  reduce 29

	conj  goto 64

state 83
	line :  line conj thecondition_    (31)

	.  reduce 31


state 84
	thecondition :  _inside_open multicondition _inside_close_    (33)

	.  reduce 33


state 85
	multicondition :  multicondition _inside_inside_and condition_    (35)

	.  reduce 35


state 86
	condition :  expression oper expression_    (37)
	expression :  expression_oper operand 

	_greater  shift 75
	_greater_equal  shift 76
	_less  shift 77
	_less_equal  shift 78
	_equal  shift 103
	_un_equal  shift 79
	_not_equal  shift 102
	.  reduce 37

	oper  goto 101

87: reduce/reduce conflict (red'ns 69 and 70 ) on _greater
87: reduce/reduce conflict (red'ns 69 and 70 ) on _greater_equal
87: reduce/reduce conflict (red'ns 69 and 70 ) on _less
87: reduce/reduce conflict (red'ns 69 and 70 ) on _less_equal
87: reduce/reduce conflict (red'ns 69 and 70 ) on _equal
87: reduce/reduce conflict (red'ns 69 and 70 ) on _un_equal
87: reduce/reduce conflict (red'ns 69 and 70 ) on _not_equal
state 87
	expression :  expression oper operand_    (69)
	expression :  operand_    (70)

	$end  reduce 70
	_inside_and  reduce 70
	_inside_inside_and  reduce 70
	_close  reduce 70
	_inside_close  reduce 70
	_outside_or  reduce 70
	_inside_or  reduce 70
	_outside_and  reduce 70
	.  reduce 69


state 88
	condition :  expression _between $$38_expression _inside_and $$39 expression 

	_column_name  shift 53
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	expression  goto 104
	operand  goto 51
	value  goto 52

state 89
	condition :  expression _not _between_$$41 expression _inside_and $$42 expression 
	$$41 : _    (41)

	.  reduce 41

	$$41  goto 105

state 90
	condition :  expression _not $$47__in $$48 _inside_open $$49 value_list _inside_close 

	_in  shift 106
	.  error


state 91
	condition :  expression _not $$56__like $$57 _string 

	_like  shift 107
	.  error


state 92
	condition :  expression _in $$44__inside_open $$45 value_list _inside_close 

	_inside_open  shift 108
	.  error


state 93
	condition :  expression _is $$51__not $$52 _null 

	_not  shift 109
	.  error


state 94
	condition :  expression _is $$54__null 

	_null  shift 110
	.  error


state 95
	condition :  expression _like $$59__string 

	_string  shift 111
	.  error


state 96
	condition :  expression _equal $$61_expression 

	_column_name  shift 53
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	expression  goto 112
	operand  goto 51
	value  goto 52

state 97
	condition :  expression _equal $$65__string 

	_string  shift 113
	.  error


state 98
	condition :  expression _not_equal $$63_expression 

	_column_name  shift 53
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	expression  goto 114
	operand  goto 51
	value  goto 52

state 99
	condition :  expression _not_equal $$67__string 

	_string  shift 115
	.  error


state 100
	selection_criteria :  _open $$26 select_lines _close_    (27)

	.  reduce 27


state 101
	expression :  expression oper_operand 

	_column_name  shift 53
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	operand  goto 116
	value  goto 52

state 102
	oper :  _not_equal_    (82)

	.  reduce 82


state 103
	oper :  _equal_    (83)

	.  reduce 83


state 104
	condition :  expression _between $$38 expression__inside_and $$39 expression 
	expression :  expression_oper operand 

	_inside_and  shift 117
	_greater  shift 75
	_greater_equal  shift 76
	_less  shift 77
	_less_equal  shift 78
	_equal  shift 103
	_un_equal  shift 79
	_not_equal  shift 102
	.  error

	oper  goto 101

state 105
	condition :  expression _not _between $$41_expression _inside_and $$42 expression 

	_column_name  shift 53
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	expression  goto 118
	operand  goto 51
	value  goto 52

state 106
	condition :  expression _not $$47 _in_$$48 _inside_open $$49 value_list _inside_close 
	$$48 : _    (48)

	.  reduce 48

	$$48  goto 119

state 107
	condition :  expression _not $$56 _like_$$57 _string 
	$$57 : _    (57)

	.  reduce 57

	$$57  goto 120

state 108
	condition :  expression _in $$44 _inside_open_$$45 value_list _inside_close 
	$$45 : _    (45)

	.  reduce 45

	$$45  goto 121

state 109
	condition :  expression _is $$51 _not_$$52 _null 
	$$52 : _    (52)

	.  reduce 52

	$$52  goto 122

state 110
	condition :  expression _is $$54 _null_    (55)

	.  reduce 55


state 111
	condition :  expression _like $$59 _string_    (60)

	.  reduce 60


state 112
	condition :  expression _equal $$61 expression_    (62)
	expression :  expression_oper operand 

	_greater  shift 75
	_greater_equal  shift 76
	_less  shift 77
	_less_equal  shift 78
	_equal  shift 103
	_un_equal  shift 79
	_not_equal  shift 102
	.  reduce 62

	oper  goto 101

state 113
	condition :  expression _equal $$65 _string_    (66)

	.  reduce 66


state 114
	condition :  expression _not_equal $$63 expression_    (64)
	expression :  expression_oper operand 

	_greater  shift 75
	_greater_equal  shift 76
	_less  shift 77
	_less_equal  shift 78
	_equal  shift 103
	_un_equal  shift 79
	_not_equal  shift 102
	.  reduce 64

	oper  goto 101

state 115
	condition :  expression _not_equal $$67 _string_    (68)

	.  reduce 68


state 116
	expression :  expression oper operand_    (69)

	.  reduce 69


state 117
	condition :  expression _between $$38 expression _inside_and_$$39 expression 
	$$39 : _    (39)

	.  reduce 39

	$$39  goto 123

state 118
	condition :  expression _not _between $$41 expression__inside_and $$42 expression 
	expression :  expression_oper operand 

	_inside_and  shift 124
	_greater  shift 75
	_greater_equal  shift 76
	_less  shift 77
	_less_equal  shift 78
	_equal  shift 103
	_un_equal  shift 79
	_not_equal  shift 102
	.  error

	oper  goto 101

state 119
	condition :  expression _not $$47 _in $$48__inside_open $$49 value_list _inside_close 

	_inside_open  shift 125
	.  error


state 120
	condition :  expression _not $$56 _like $$57__string 

	_string  shift 126
	.  error


state 121
	condition :  expression _in $$44 _inside_open $$45_value_list _inside_close 

	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	value_list  goto 127
	value  goto 128

state 122
	condition :  expression _is $$51 _not $$52__null 

	_null  shift 129
	.  error


state 123
	condition :  expression _between $$38 expression _inside_and $$39_expression 

	_column_name  shift 53
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	expression  goto 130
	operand  goto 51
	value  goto 52

state 124
	condition :  expression _not _between $$41 expression _inside_and_$$42 expression 
	$$42 : _    (42)

	.  reduce 42

	$$42  goto 131

state 125
	condition :  expression _not $$47 _in $$48 _inside_open_$$49 value_list _inside_close 
	$$49 : _    (49)

	.  reduce 49

	$$49  goto 132

state 126
	condition :  expression _not $$56 _like $$57 _string_    (58)

	.  reduce 58


state 127
	condition :  expression _in $$44 _inside_open $$45 value_list__inside_close 
	value_list :  value_list__comma $$84 value 

	_inside_close  shift 133
	_comma  shift 134
	.  error


state 128
	value_list :  value_    (86)

	.  reduce 86


state 129
	condition :  expression _is $$51 _not $$52 _null_    (53)

	.  reduce 53


state 130
	condition :  expression _between $$38 expression _inside_and $$39 expression_    (40)
	expression :  expression_oper operand 

	_greater  shift 75
	_greater_equal  shift 76
	_less  shift 77
	_less_equal  shift 78
	_equal  shift 103
	_un_equal  shift 79
	_not_equal  shift 102
	.  reduce 40

	oper  goto 101

state 131
	condition :  expression _not _between $$41 expression _inside_and $$42_expression 

	_column_name  shift 53
	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	expression  goto 135
	operand  goto 51
	value  goto 52

state 132
	condition :  expression _not $$47 _in $$48 _inside_open $$49_value_list _inside_close 

	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	value_list  goto 136
	value  goto 128

state 133
	condition :  expression _in $$44 _inside_open $$45 value_list _inside_close_    (46)

	.  reduce 46


state 134
	value_list :  value_list _comma_$$84 value 
	$$84 : _    (84)

	.  reduce 84

	$$84  goto 137

state 135
	condition :  expression _not _between $$41 expression _inside_and $$42 expression_    (43)
	expression :  expression_oper operand 

	_greater  shift 75
	_greater_equal  shift 76
	_less  shift 77
	_less_equal  shift 78
	_equal  shift 103
	_un_equal  shift 79
	_not_equal  shift 102
	.  reduce 43

	oper  goto 101

state 136
	condition :  expression _not $$47 _in $$48 _inside_open $$49 value_list__inside_close 
	value_list :  value_list__comma $$84 value 

	_inside_close  shift 138
	_comma  shift 134
	.  error


state 137
	value_list :  value_list _comma $$84_value 

	_string  shift 56
	_int_value  shift 54
	_real_value  shift 55
	.  error

	value  goto 139

state 138
	condition :  expression _not $$47 _in $$48 _inside_open $$49 value_list _inside_close_    (50)

	.  reduce 50


state 139
	value_list :  value_list _comma $$84 value_    (85)
